  underscores in the spoken curse words, which looks ugly, but still works for
  now until next client build is pushed out.  Part of #1119

--Fixed mod exporter code to avoid duplicating author=author= in .txt files
  for sound files included in export.  Part of #1114

--copyChangesToRepo.bat utility script now copies txt files from sounds
  folder.  Part of #1114



Server Fixes:

--Fixed so that shutdownLongLineagePos.txt is cleared during apocalypse, so
  that Eve location is fully reset to 0.  Fixes #1103

--Fixed crash when rocket ride is interrupted by rider disconnecting and then
  re-connecting as a twin.  Fixes #1110

--Now counts AHAP votes over 30 day window.  Also shows candidate github
  usernames on vote stats page.  Part of #1107

--AHAP vote stats page now shows full list of registered github names (who you
  can vote for).

--Support for forceBoyAccounts.ini list in server settings, preventing those
  accounts from being born as girls (if not Eve).  Useful for bots, to make
  sure bots are never mothers.

--Fixed so that AHAP leader votes are tracked internally by github account
  name, and not by email.  This fixes the problem where one user specifies
  someone else's github as their own to falsely receive votes for themselves.
  Part of #1112

--Server now uses 3 curse words per player, instead of two.  Since there are
  201 useable curse words, this takes the number of combinations up from
  40,401 up to over 8 million, which reduces the chances of a duplicate
  combination being used.  Fixes #1119

--pullAndBuildTestSystem.sh script now links contentSettings correctly for
  both client and server.  Fixes #1117

--updateGate now gives the content leader power to trigger an AHAP map wipe.
  Part of #1116

--Fixed so that if Eve (or another family member) creates their first well
  outside the birthland band, it doesn't unlock iron.  Only wells dug inside
  the birthland band can be primary homelands and unlock iron.  Fixes #1120
